tests/snapshots/examples_fixtures/type_system__05_mixed_typed_untyped.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/05_mixed_typed_untyped.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
