tests/snapshots/examples_fixtures/type_system__103_effect_row_multivar_disambiguated_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/103_effect_row_multivar_disambiguated_ok.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
