tests/snapshots/examples_fixtures/type_system__104_effect_row_absent_ordering_linked_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/104_effect_row_absent_ordering_linked_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
