tests/snapshots/examples_fixtures/type_system__10_boundary_runtime_success.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/10_boundary_runtime_success.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
