tests/snapshots/examples_fixtures/type_system__161_contextual_boundary_effect_module_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/161_contextual_boundary_effect_module_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
