tests/snapshots/examples_fixtures/type_system__164_effect_row_subtract_var_satisfied_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/164_effect_row_subtract_var_satisfied_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
